force-app/main/default/objects/Insurance_Product__c.object
<CustomObject>
    <label>Insurance Product</label>
    <pluralLabel>Insurance Products</pluralLabel>

    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>


    <!-- Product catalog is usually managed by ops/admins -->
    <sharingModel>ReadWrite</sharingModel>

    <!-- Product_Code__c (legacy key / external id) -->
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <type>Text</type>
        <length>40</length>
        <unique>true</unique>
        <externalId>true</externalId>
    </fields>

    <!-- Coverage_Type__c (e.g., Motor/Accident/Health/Life/Travel/Critical Illness/Savings) -->
    <fields>
        <fullName>Coverage_Type__c</fullName>
        <label>Coverage Type</label>
        <type>Picklist</type>
        <required>true</required>
        <picklist>
            <picklistValues>
                <fullName>Motor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Illness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
    </fields>

    <!-- Max_Term_Years__c -->
    <fields>
        <fullName>Max_Term_Years__c</fullName>
        <label>Max Term (Years)</label>
        <type>Number</type>
        <precision>3</precision>
        <scale>0</scale>
    </fields>

    <!-- Max_Coverage__c -->
    <fields>
        <fullName>Max_Coverage__c</fullName>
        <label>Max Coverage</label>
        <type>Currency</type>
        <precision>18</precision>
        <scale>2</scale>
    </fields>

    <!-- Base_Premium__c -->
    <fields>
        <fullName>Base_Premium__c</fullName>
        <label>Base Premium</label>
        <type>Currency</type>
        <precision>18</precision>
        <scale>2</scale>
    </fields>

    <!-- Max_Premium__c -->
    <fields>
        <fullName>Max_Premium__c</fullName>
        <label>Max Premium</label>
        <type>Currency</type>
        <precision>18</precision>
        <scale>2</scale>
    </fields>

    <!-- Currency / frequency -->
    <fields>
        <fullName>Premium_Frequency__c</fullName>
        <label>Premium Frequency</label>
        <type>Picklist</type>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-time</fullName>
            </picklistValues>
        </picklist>
    </fields>

    <!-- Eligibility / underwriting flags -->
    <fields>
        <fullName>Requires_Underwriting__c</fullName>
        <label>Requires Underwriting</label>
        <type>Checkbox</type>
        <defaultValue>false</defaultValue>
    </fields>

    <fields>
        <fullName>Supports_Dependents__c</fullName>
        <label>Supports Dependents</label>
        <type>Checkbox</type>
        <defaultValue>false</defaultValue>
    </fields>

    <fields>
        <fullName>Supports_Addons__c</fullName>
        <label>Supports Add-ons</label>
        <type>Checkbox</type>
        <defaultValue>false</defaultValue>
    </fields>

    <!-- Effective dates -->
    <fields>
        <fullName>Effective_From__c</fullName>
        <label>Effective From</label>
        <type>Date</type>
    </fields>

    <fields>
        <fullName>Effective_To__c</fullName>
        <label>Effective To</label>
        <type>Date</type>
    </fields>

    <!-- Status -->
    <fields>
        <fullName>Is_Active__c</fullName>
        <label>Is Active</label>
        <type>Checkbox</type>
        <defaultValue>true</defaultValue>
    </fields>

    <!-- Description -->
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>LongTextArea</type>
        <length>32768</length>
    </fields>

</CustomObject>