force-app/main/default/objects/Insurance_Product__c/fields/Supports_Add_ons__c.field-meta.xml
<CustomField>
    <fullName>Supports_Add_ons__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supports Add-ons</label>
    <type>Checkbox</type>
</CustomField>